--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <header> <!-- NAVIGATION STATIQUE -->
+        <header> <!-- HEADER - NAVIGATION-->
             <nav class="main-nav">
                     <div class="main-nav-logo">
                         <a id="logo_reservia" href="index.html"><img src="images/logo/Booki.png" alt="Logo de Booki - page d'accueil" width="100" /></a>
@@ -34,7 +34,7 @@
                         <div class="search-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <label for="ville"><input type="text" name="ville" id="ville" placeholder="Marseille, France" size="22"/></label>
                         <a class="button-search" aria-hidden="false" href="#">Rechercher</a>
-                        <div class="button-search-icon" aria-hidden="true"><i class="fas fa-map-marker-alt"></i></div>
+                        <div class="button-search-icon" aria-hidden="true"><i class="fas fa-search"></i></div>
                     </div>
 
                     <div class="filters">
@@ -163,6 +163,7 @@
                             </div>
                         </a>
                     </div>
+
                     <h2><a href="#">Afficher plus</a></h2>
                 </section>
 
@@ -228,7 +229,8 @@
                         <img class="activities-image-premier" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux_port">
                         <h2>Vieux Port</h2>
                     </a>
-                    <div class="second-third-image">
+
+                    <div class="second-third-image"> <!-- 2e et 3e carte -->
                         <a href="#" class="cards-second"> <!-- 2e carte -->
                             <img class="activities-image-two" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort_pomegues">
                             <h2>Fort de Pomègues</h2>
@@ -244,7 +246,8 @@
                         <img class="activities-image-four" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc_calanques">
                         <h2>Parc National des Calanques</h2>
                     </a>
-                    <div class="five-six-image">
+
+                    <div class="five-six-image"> <!-- 5e et 6e carte -->
                         <a href="#" class="cards-five"> <!-- 5e carte -->
                             <img class="activities-image-five" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre_dame">
                             <h2>Notre-Dame-de-la-Garde</h2>
