--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
                     </div>
 
                     <div class="filters">
-                        <h2>Filtres</h2>
+                        <h3>Filtres</h3>
 
                         <a href="#" class="filters-items">
                             <div class="filters-icons"><i class="fas fa-money-bill-wave"></i></div>
-                            <h2>Économique</h2>
+                            <h3>Économique</h3>
                         </a>
 
                         <a href="#" class="filters-items">
                             <div class="filters-icons"><i class="fas fa-child"></i></div>
-                            <h2>Familial</h2>
+                            <h3>Familial</h3>
                         </a>
 
                         <a href="#" class="filters-items">
                             <div class="filters-icons"><i class="fas fa-heart"></i></div>
-                            <h2>Romantique</h2>
+                            <h3>Romantique</h3>
                         </a>
 
                         <a href="#" class="filters-items">
                             <div class="filters-icons"><i class="fas fa-dog"></i></div>
-                            <h2>Animaux autorisés</h2>
+                            <h3>Animaux autorisés</h3>
                         </a>
                     </div>
 
@@ -70,13 +70,13 @@
 
             <section id="main-accommodations"> <!-- SECTION 2 / Hébergements à Marseille -->
                 <section class="accomodations-marseille">
-                    <h1 class="h1-title">Hébergements à Marseille</h1>
+                    <h2>Hébergements à Marseille</h2>
 
                     <div class="accomodations-marseille-cards">
                         <a href="#" class="cards-marseille"> <!-- Ligne 1 - 1er carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge_cannebiere">
                             <div class="cards-marseille-infos">
-                                <h2>Auberge La Cannebière</h2>
+                                <h3>Auberge La Cannebière</h3>
                                 <p>Nuit à partir de <strong>25€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -91,7 +91,7 @@
                         <a href="#" class="cards-marseille"> <!-- Ligne 1 - 2e carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel_port">
                             <div class="cards-marseille-infos">
-                                <h2>Hôtel du port</h2>
+                                <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de <strong>52€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -106,7 +106,7 @@
                         <a href="#" class="cards-marseille"> <!-- Ligne 1 - 3e carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel_mouettes">
                             <div class="cards-marseille-infos">
-                                <h2>Hôtel Les mouettes</h2>
+                                <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de <strong>76€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -121,7 +121,7 @@
                         <a href="#" class="cards-marseille"> <!-- Ligne 2 - 1er carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel_mer">
                             <div class="cards-marseille-infos">
-                                <h2>Hôtel de la mer</h2>
+                                <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de <strong>46€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -136,7 +136,7 @@
                         <a href="#" class="cards-marseille"> <!-- Ligne 2 - 2e carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge_panier">
                             <div class="cards-marseille-infos">
-                                <h2>Auberge Le Panier</h2>
+                                <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <strong>23€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -151,7 +151,7 @@
                         <a href="#" class="cards-marseille"> <!-- Ligne 2 - 3e carte -->
                             <img class="marseille-image" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel_amina">
                             <div class="cards-marseille-infos">
-                                <h2>Hôtel chez Amina</h2>
+                                <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de <strong>96€</strong></p>
                                 <div class="star">
                                     <i class="fas fa-star"></i>
@@ -169,14 +169,14 @@
 
                 <aside class="accomodations-popular">
                     <div class="accomodations-popular-title">
-                        <h1 class="h1-title">Les plus populaires</h1>
+                        <h2>Les plus populaires</h2>
                         <i class="fas fa-chart-line chart-line"></i>
                     </div>
 
                     <a href="#" class="cards-popular"> <!-- Ligne 1 - 1er carte -->
                         <img class="popular-image" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel_soleilmatin">
                         <div class="cards-popular-infos">
-                            <h2>Hôtel Le soleil du matin</h2>
+                            <h3>Hôtel Le soleil du matin</h3>
                             <p> Nuit à partir de 128€</p>
                             <div class="star-popular">
                                 <i class="fas fa-star"></i>
@@ -191,8 +191,8 @@
                     <a href="#" class="cards-popular"> <!-- Ligne 2 - 2e carte -->
                         <img class="popular-image" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre_hote">
                         <div class="cards-popular-infos">
-                            <h2>Au coeur de l'eau
-                                Chambres d'hôtes</h2>
+                            <h3>Au coeur de l'eau
+                                Chambres d'hôtes</h3>
                             <p> Nuit à partir de 71€</p>
                             <div class="star-popular">
                                 <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
                     <a href="#" class="cards-popular"> <!-- Ligne 3 - 3e carte -->
                         <img class="popular-image" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel_bleublanc">
                         <div class="cards-popular-infos">
-                            <h2>Hôtel tout Bleu et Blanc</h2>
+                            <h3>Hôtel tout Bleu et Blanc</h3>
                             <p> Nuit à partir de 68€</p>
                             <div class="star-popular">
                                 <i class="fas fa-star"></i>
@@ -222,40 +222,40 @@
             </section>
 
             <section id="main-activities"> <!-- SECTION 3 / Activités à Marseille -->
-                <h1 class="h1-title">Activités à Marseille</h1>
+                <h2>Activités à Marseille</h2>
 
                 <div class="activities-cards">
                     <a href="#" class="cards-premier"> <!-- 1er carte -->
                         <img class="activities-image-premier" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux_port">
-                        <h2>Vieux Port</h2>
+                        <h3>Vieux Port</h3>
                     </a>
 
                     <div class="second-third-image"> <!-- 2e et 3e carte -->
                         <a href="#" class="cards-second"> <!-- 2e carte -->
                             <img class="activities-image-two" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort_pomegues">
-                            <h2>Fort de Pomègues</h2>
+                            <h3>Fort de Pomègues</h3>
                         </a>
     
                         <a href="#" class="cards-third"> <!-- 3e carte -->
                             <img class="activities-image-three" src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile_frioul">
-                            <h2>Îles du Frioul</h2>
+                            <h3>Îles du Frioul</h3>
                         </a>
                     </div>
 
                     <a href="#" class="cards-four"> <!-- 4e carte -->
                         <img class="activities-image-four" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc_calanques">
-                        <h2>Parc National des Calanques</h2>
+                        <h3>Parc National des Calanques</h3>
                     </a>
 
                     <div class="five-six-image"> <!-- 5e et 6e carte -->
                         <a href="#" class="cards-five"> <!-- 5e carte -->
                             <img class="activities-image-five" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre_dame">
-                            <h2>Notre-Dame-de-la-Garde</h2>
+                            <h3>Notre-Dame-de-la-Garde</h3>
                         </a>
     
                         <a href="#" class="cards-six"> <!-- 6e carte -->
                             <img class="activities-image-six" src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc_longchamp">
-                            <h2>Parc Longchamp</h2>
+                            <h3>Parc Longchamp</h3>
                         </a>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
         <footer> <!-- NAVIGATION FOOTER -->
             <nav class="footer-nav">
                 <div class="footer-nav-about"> <!-- Liste À propos -->
-                    <h2>À propos</h2>
+                    <h3>À propos</h3>
                     <ul class="footer-about">
                         <li class="footer-about-list"><a href="#">Fonctionnement du site</a></li>
                         <li class="footer-about-list"><a href="#">Conditions générales de vente</a></li>
@@ -274,7 +274,7 @@
                 </div>
 
                 <div class="footer-nav-accommodation"> <!-- Liste Nos Hébergements -->
-                    <h2>Nos hébergements</h2>
+                    <h3>Nos hébergements</h3>
                     <ul class="footer-accommodation">
                         <li class="footer-accommodation-list"><a href="#">Charte qualité</a></li>
                         <li class="footer-accommodation-list"><a href="#">Soumettre votre hôtel</a></li>
@@ -282,7 +282,7 @@
                 </div>
 
                 <div class="footer-nav-assistance"> <!-- Liste Assistance -->
-                    <h2>Assistance</h2>
+                    <h3>Assistance</h3>
                     <ul class="footer-assistance">
                         <li class="footer-assistance-list"><a href="#">Centre d'aide</a></li>
                         <li class="footer-assistance-list"><a href="#">Nous contacter</a></li>
