--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main> <!-- CONTENU PAGE D'ACCUEIL -->
             <section class="main-reservation"> <!-- SECTION 1 / Formulaire de Réservation -->
                 <form method="post" action="traitement.php">
-                    <h1 class="h1-title">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h1 class="h1-tile">Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
 
                     <div class="search-city">
