--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https : //fonts.googleapis.com/css2? family= Raleway & display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,7 +71,7 @@
                 </form>
             </section>
 
-            <section id="main-accommodations"> <!-- SECTION 2 / Hébergements à Marseille -->
+            <div id="main-accommodations"> <!-- SECTION 2 / Hébergements à Marseille -->
                 <section class="accomodations-marseille">
                     <h2>Hébergements à Marseille</h2>
 
@@ -219,7 +222,7 @@
                         </div>
                     </a>
                 </aside>
-            </section>
+            </div>
 
             <section id="main-activities"> <!-- SECTION 3 / Activités à Marseille -->
                 <h2>Activités à Marseille</h2>
