--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="scss/main.scss">
+        <link rel="stylesheet" href="scss/main.css">
         <link rel="stylesheet" href="css/normalize.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="images/logo/ohmyfood@2x.svg">
@@ -23,7 +23,7 @@
         <main>
             <section class="exploration"> <!-- SECTION 1 - Explorer restaurant lieu -->
                 <div class="exploration-place">
-                    <i class="fas fa-map-marker-alt"></i>
+                    <i class="fas fa-map-marker-alt place"></i>
                     <h4>Paris, Belleville</h4>
                 </div>
 
@@ -37,22 +37,22 @@
             <section class="functioning"> <!-- SECTION 2 - Fonctionnement application -->
                 <h2>Fonctionnement</h2>
 
-                <div class="step_1">
-                    <div><h4>1</h4></div>
-                    <i class="fas fa-mobile-alt"></i>
-                    <h4>Choisissez un restaurant</h4>
+                <div class="step-1">
+                    <h4 class="step-1__number">1</h4>
+                    <i class="fas fa-mobile-alt number"></i>
+                    <h4 class="step-1__step">Choisissez un restaurant</h4>
                 </div>
 
-                <div class="step_2">
-                    <div><h4>2</h4></div>
-                    <i class="fas fa-list-ul"></i>
-                    <h4>Composez votre menu</h4>
+                <div class="step-2">
+                    <h4 class="step-2__number">2</h4>
+                    <i class="fas fa-list-ul number"></i>
+                    <h4 class="step-2__step">Composez votre menu</h4>
                 </div>
 
-                <div class="step_3">
-                    <div><h4>3</h4></div>
-                    <i class="fas fa-store"></i>
-                    <h4>Dégustez au restaurant</h4>
+                <div class="step-3">
+                    <h4 class="step-3__number">3</h4>
+                    <i class="fas fa-store number"></i>
+                    <h4 class="step-3__step">Dégustez au restaurant</h4>
                 </div>
             </section>
 
